feat: more admin routes
